infra/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP
